--- a/Clase 6/sesion6_estilo_tablas.Rmd
+++ b/Clase 6/sesion6_estilo_tablas.Rmd
@@ -306,6 +306,23 @@ datos_aire
 d. Además, agrupelas columnas Ozone, Solar.R y Wind bajo un tab_spanner llamada "Mediciones", 
 y las columnas Temp, Month y Day bajo un tab_spanner llamado "Tiempo".
 
+```{r}
+datos_aire <- datos_aire |> 
+  tab_spanner(
+    label = "Mediciones",
+    columns = c(Ozone, Solar.R,Wind)
+  ) |>
+  tab_spanner(
+    label = "Tiempo",
+    columns = c(Temp, Month,Day)
+  )
+datos_aire
+```
+
+
+
+
+
 e. Renombre las columnas para que estén en español y coloque colores a su gusto a 
 la columna Temperatura.
 
